remove references related with issue #61
Signed-off-by: ezgidemirel <ezgidemirel91@gmail.com>

--- a/provider-gcp/examples-generated/compute/diskiampolicy.yaml
+++ b/provider-gcp/examples-generated/compute/diskiampolicy.yaml
@@ -10,12 +10,8 @@ spec:
       matchLabels:
         testing.upbound.io/example-name: default
     policyData: ${data.google_iam_policy.admin.policy_data}
-    projectSelector:
-      matchLabels:
-        testing.upbound.io/example-name: default
-    zoneSelector:
-      matchLabels:
-        testing.upbound.io/example-name: default
+    project: ${google_compute_disk.default.project}
+    zone: us-central1-a
 
 ---
 
