--- a/provider-gcp/examples-generated/dns/recordset.yaml
+++ b/provider-gcp/examples-generated/dns/recordset.yaml
@@ -9,9 +9,7 @@ spec:
     managedZoneSelector:
       matchLabels:
         testing.upbound.io/example-name: prod
-    nameSelector:
-      matchLabels:
-        testing.upbound.io/example-name: prod
+    name: frontend.${google_dns_managed_zone.prod.dns_name}
     rrdatas:
     - ${google_compute_instance.frontend.network_interface[0].access_config[0].nat_ip}
     ttl: 300
