--- a/provider-gcp/examples-generated/pubsub/topiciampolicy.yaml
+++ b/provider-gcp/examples-generated/pubsub/topiciampolicy.yaml
@@ -7,9 +7,7 @@ metadata:
 spec:
   forProvider:
     policyData: ${data.google_iam_policy.admin.policy_data}
-    projectSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    project: ${google_pubsub_topic.example.project}
     topicSelector:
       matchLabels:
         testing.upbound.io/example-name: example
