--- a/provider-gcp/examples/cloudplatform/projectdefaultserviceaccounts.yaml
+++ b/provider-gcp/examples/cloudplatform/projectdefaultserviceaccounts.yaml
@@ -2,10 +2,13 @@ apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectDefaultServiceAccounts
 metadata:
   name: example
+  labels:
+    testing.upbound.io/example-name: example
   annotations:
     upjet.upbound.io/manual-intervention: "This is a project level resource and could be distructive"
 spec:
   forProvider:
     action: DEPRIVILEGE
-    projectRef:
-      name: example
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
