--- a/provider-gcp/examples-generated/cloudplatform/projectdefaultserviceaccounts.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/projectdefaultserviceaccounts.yaml
@@ -1,9 +1,15 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectDefaultServiceAccounts
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: my_project
+  name: my-project
 spec:
   forProvider:
     action: DELETE
-    projectRef:
-      name: example
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+
+---
+
