--- a/provider-gcp/examples-generated/cloudplatform/projectusageexportbucket.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/projectusageexportbucket.yaml
@@ -1,10 +1,17 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectUsageExportBucket
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: usage_export
+  name: usage-export
 spec:
   forProvider:
-    bucketNameRef:
-      name: example
-    projectRef:
-      name: example
+    bucketNameSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+
+---
+
