--- a/provider-gcp/examples/cloudplatform/projectservice.yaml
+++ b/provider-gcp/examples/cloudplatform/projectservice.yaml
@@ -2,11 +2,14 @@ apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectService
 metadata:
   name: example
+  labels:
+    testing.upbound.io/example-name: example
   annotations:
     upjet.upbound.io/manual-intervention: "Project level resource and is environment specific"
 spec:
   forProvider:
     disableDependentServices: false
-    projectRef:
-      name: example
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     service: clouddeploy.googleapis.com
