Remove explicit references and regenerate

--- a/provider-gcp/examples-generated/compute/managedsslcertificate.yaml
+++ b/provider-gcp/examples-generated/compute/managedsslcertificate.yaml
@@ -20,8 +20,8 @@ metadata:
   name: default
 spec:
   forProvider:
-    healthChecksRefs:
-    - name: default
+    healthChecks:
+    - ${google_compute_http_health_check.default.id}
     portName: http
     protocol: HTTP
     timeoutSec: 10
