--- a/provider-gcp/examples/cloudrun/domainmapping.yaml
+++ b/provider-gcp/examples/cloudrun/domainmapping.yaml
@@ -1,16 +1,20 @@
 apiVersion: cloudrun.gcp.upbound.io/v1beta1
 kind: DomainMapping
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example
   annotations:
     upjet.upbound.io/manual-intervention: "Caller must be authorized to administer the domain example.com"
+  name: example 
 spec:
   forProvider:
     name: example.com
     location: us-central1
     metadata:
-    - namespaceRef:
-        name: example
+    - namespaceSelector:
+        matchLabels:
+          testing.upbound.io/example-name: example
     spec:
-    - routeNameRef:
-        name: example
+    - routeNameSelector:
+        matchLabels:
+          testing.upbound.io/example-name: example
