--- a/provider-gcp/examples/cloudrun/serviceiambinding.yaml
+++ b/provider-gcp/examples/cloudrun/serviceiambinding.yaml
@@ -1,14 +1,17 @@
 apiVersion: cloudrun.gcp.upbound.io/v1beta1
 kind: ServiceIAMBinding
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example
   annotations:
     upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
+  name: example
 spec:
   forProvider:
     location: us-central1
     members:
       - "user:jane@example.com"
     role: "roles/viewer"
-    serviceRef:
-      name: example
+    serviceSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
