--- a/provider-gcp/examples/cloudrun/serviceiampolicy.yaml
+++ b/provider-gcp/examples/cloudrun/serviceiampolicy.yaml
@@ -1,9 +1,11 @@
 apiVersion: cloudrun.gcp.upbound.io/v1beta1
 kind: ServiceIAMPolicy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example
   annotations:
     upjet.upbound.io/manual-intervention: "Members are dependent on the project and leak sensitive information"
+  name: example
 spec:
   forProvider:
     location: us-central1
@@ -18,5 +20,7 @@ spec:
           }
         ]
       }
-    serviceRef:
-      name: example
+    serviceSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+
