--- a/provider-gcp/examples/compute/backendbucket.yaml
+++ b/provider-gcp/examples/compute/backendbucket.yaml
@@ -1,6 +1,8 @@
 apiVersion: storage.gcp.upbound.io/v1beta1
 kind: Bucket
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
   name: example-backend
 spec:
   forProvider:
@@ -12,10 +14,13 @@ spec:
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: BackendBucket
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
   name: example-backend
 spec:
   forProvider:
-    bucketNameRef:
-      name: example-backend
+    bucketNameSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     description: Contains beautiful images
     enableCdn: true
