--- a/provider-gcp/examples/compute/backendservice.yaml
+++ b/provider-gcp/examples/compute/backendservice.yaml
@@ -1,6 +1,8 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: HealthCheck
 metadata:
+  labels:
+    testing.upbound.io/example-name: example  
   name: example-backend-service
 spec:
   forProvider:
@@ -14,9 +16,11 @@ spec:
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: BackendService
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example  
   annotations:
     upjet.upbound.io/manual-intervention: "HealthCheck URL is enviroment specific"
+  name: example
 spec:
   forProvider:
     healthChecks:
