--- a/provider-gcp/examples-generated/cloudplatform/servicenetworkingpeereddnsdomain.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/servicenetworkingpeereddnsdomain.yaml
@@ -7,7 +7,9 @@ metadata:
 spec:
   forProvider:
     dnsSuffix: example.com.
-    network: default
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     project: 10000000
     service: peering-service
 
