--- a/provider-gcp/examples/cloudtasks/queue.yaml
+++ b/provider-gcp/examples/cloudtasks/queue.yaml
@@ -1,6 +1,9 @@
 apiVersion: cloudtasks.gcp.upbound.io/v1beta1
 kind: Queue
 metadata:
+metadata:
+  annotations:
+    upjet.upbound.io/manual-intervention: "Queue name cannot be re-used within a reasonable amount of time"
   name: example
 spec:
   forProvider:
