--- a/provider-gcp/examples/composer/environment.yaml
+++ b/provider-gcp/examples/composer/environment.yaml
@@ -5,3 +5,9 @@ metadata:
 spec:
   forProvider:
     region: us-central1
+    config:
+      - nodeConfig:
+        - ipAllocationPolicy:
+            - useIpAliases: true
+              clusterIpv4CidrBlock: 10.80.0.0/14
+              servicesIpv4CidrBlock: 10.84.0.0/20
