--- a/provider-gcp/examples-generated/compute/networkpeering.yaml
+++ b/provider-gcp/examples-generated/compute/networkpeering.yaml
@@ -1,8 +1,41 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: NetworkPeering
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: peering1
+  name: peering1
 spec:
   forProvider:
-    network: ${google_compute_network.default.self_link}
-    peerNetwork: ${google_compute_network.other.self_link}
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: default
+    peerNetworkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: other
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
+spec:
+  forProvider:
+    autoCreateSubnetworks: "false"
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: other
+  name: other
+spec:
+  forProvider:
+    autoCreateSubnetworks: "false"
+
+---
+
