--- a/provider-gcp/examples/compute/networkpeering.yaml
+++ b/provider-gcp/examples/compute/networkpeering.yaml
@@ -1,10 +1,38 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: NetworkPeering
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
   name: example
-  annotations:
-    upjet.upbound.io/manual-intervention: "Requires project name in network and peerNetwork values, which should not be leaked to marketplace"
 spec:
   forProvider:
-    network: /projects/default/global/networks/example-peering-1
-    peerNetwork: /projects/default/global/networks/example-peering-2
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+    peerNetworkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: other
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: example
+  name: example
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: other
+  name: other
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
