--- a/provider-gcp/examples-generated/cloudplatform/organizationiampolicy.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/organizationiampolicy.yaml
@@ -1,8 +1,13 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: OrganizationIAMPolicy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: organization
+  name: organization
 spec:
   forProvider:
     orgId: your-organization-id
     policyData: ${data.google_iam_policy.admin.policy_data}
+
+---
+
