--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_organizationiamauditconfigs.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_organizationiamauditconfigs.yaml
@@ -36,7 +36,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: OrganizationIAMAuditConfig is the Schema for the OrganizationIAMAuditConfigs
-          API
+          API. <no value>
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -284,6 +284,7 @@ spec:
               atProvider:
                 properties:
                   etag:
+                    description: The etag of iam policy
                     type: string
                   id:
                     type: string
