--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_organizationiambindings.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_organizationiambindings.yaml
@@ -36,7 +36,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: OrganizationIAMBinding is the Schema for the OrganizationIAMBindings
-          API
+          API. <no value>
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
